--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -259,5 +259,18 @@ tr:nth-child(even) {
 .icon {
   font-size: 17px;
   color: black;
-  margin-right: 10px;
+  width: 10px;
+}
+.icon:hover {
+  color: black;
+}
+tr td::before, tr td::after {
+  top: 7px;
+}
+.page-item.active .page-link {
+  background-color: #6a6a6a;
+  border-color: black;
+}
+#inserirNovo {
+  margin-bottom: 10px;
 }
